<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/recycler_date_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#9F9071"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recycler_temp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="start"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/recycler_weather_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_date_time" />

    <ImageView
        android:id="@+id/recycler_weather_icon"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recycler_weather_info"
        app:layout_constraintTop_toBottomOf="@+id/recycler_date_time"
        app:srcCompat="@drawable/partly_cloudy_day" />

    <TextView
        android:id="@+id/recycler_weather_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/feels_like"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/recycler_weather_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_temp" />

    <TextView
        android:id="@+id/recycler_precip_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_weather_info" />

    <TextView
        android:id="@+id/recycler_uv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/uv_index_2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_precip_info" />


    <TextView
        android:id="@+id/recycler_morning_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"

        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_uv" />

    <TextView
        android:id="@+id/home_morning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="28dp"
        android:text="@string/morning2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_morning_temp" />

    <TextView
        android:id="@+id/recycler_afternoon_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"

        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/recycler_morning_temp"
        app:layout_constraintTop_toBottomOf="@+id/recycler_uv" />

    <TextView
        android:id="@+id/home_afternoon_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="28dp"
        android:gravity="center"
        android:text="@string/afternoon2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/home_morning_text"
        app:layout_constraintTop_toBottomOf="@+id/recycler_afternoon_temp" />

    <TextView
        android:id="@+id/recycler_evening_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"

        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/recycler_afternoon_temp"
        app:layout_constraintTop_toBottomOf="@+id/recycler_uv" />

    <TextView
        android:id="@+id/home_evening_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="28dp"
        android:gravity="center"
        android:text="@string/evening2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/home_afternoon_text"
        app:layout_constraintTop_toBottomOf="@+id/recycler_evening_temp" />

    <TextView
        android:id="@+id/recycler_night_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/recycler_evening_temp"
        app:layout_constraintTop_toBottomOf="@+id/recycler_uv" />

    <TextView
        android:id="@+id/home_night_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:gravity="center"
        android:text="@string/night2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/home_evening_text"
        app:layout_constraintTop_toBottomOf="@+id/recycler_night_temp" />

</androidx.constraintlayout.widget.ConstraintLayout>